--- a/index.css
+++ b/index.css
@@ -35,7 +35,6 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  z-index: 10 !important;
   display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
@@ -44,12 +43,15 @@ body {
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+  /*display: table-cell;*/
+  min-height: 100%;
+  /*vertical-align: middle;*/
 }
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+  /*vertical-align: middle;*/
+  min-height: 100%;
 }
 
 /* Padding for spacing */
@@ -61,6 +63,12 @@ body {
 /*
  * Header
  */
+
+.masthead {
+  vertical-align: top;
+  top: 0;
+}
+
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -133,23 +141,31 @@ body {
 
 @media (min-width: 768px) {
   /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
+  /*.masthead {
+    vertical-align: top;
     top: 0;
-  }
+  }*/
   .mastfoot {
     position: fixed;
     bottom: 0;
   }
   /* Start the vertical centering */
-  .site-wrapper-inner {
+  /*.site-wrapper-inner {
     vertical-align: middle;
-  }
+  }*/
   /* Handle the widths */
   .masthead,
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+
+  .inner.cover {
+    margin-top: 80px;
+  }
+
+  iframe {
+    width: 480px;
   }
 }
 
@@ -159,9 +175,12 @@ body {
   .cover-container {
     width: 700px;
   }
+  .inner.cover {
+    margin-top: 100px;
+  }
 }
 
-.contact .cover-heading {
+/*.contact .cover-heading {
   margin-bottom: 30px;
 }
 .contact .contact-form {
@@ -171,3 +190,4 @@ body {
 .contact .form-control {
   background-color: #ddd
 }
+*/
